settings button added for #10532

--- a/public/admin/assets/views/customer-detail.html
+++ b/public/admin/assets/views/customer-detail.html
@@ -180,6 +180,14 @@
                                                         </div>
                                                     </td>
                                                 </tr>
+                                                <tr>
+                                                    <td>New Analytics:</td>
+                                                    <td>
+                                                        <div ng-show="customer">
+                                                            <switch ng-model="customer.showhide.newAnalytics" ng-change="updateNewAnalytics(customer.showhide.newAnalytics)" class="pull-right margin-bottom-10"></switch>
+                                                        </div>
+                                                    </td>
+                                                </tr>
                                             </tbody>
                                         </table>
                                         <table class="table table-condensed">
