--- a/public/admin/assets/views/customer-analytics.html
+++ b/public/admin/assets/views/customer-analytics.html
@@ -39,7 +39,26 @@
                             <highchart config="livePlatformTrafficConfig" id="live-platform-traffic-chart"></highchart>
                         </div>
                         <div class="height-215 col-sm-4">
-                            <div id="live-platform-visitor-locations"></div>
+                            <style>
+                                .slick-prev:hover, 
+                                .slick-prev:focus,
+                                 .slick-next:hover,
+                                  .slick-next:focus { 
+                                        color: #8f8f8f;
+                                        outline: none; 
+                                        background: rgb(124, 181, 236);; 
+                                    }
+                                    .slick-prev,   
+                                  .slick-next { 
+                                        color: #8f8f8f;
+                                        outline: none; 
+                                        background:rgba(124, 181, 236, 0.5); 
+                                    }
+                                </style>
+                            <div ind-slider='{  slidesToShow:1, arrows:true, autoplay:false, touchMove:true, draggable:true }'>
+                                <div id="live-platform-visitor-locations-us"></div>
+                                <div id="live-platform-visitor-locations-world"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="panel-footer border-light"></div>
