#10543 Added basic structure and contact details info

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -44,3 +44,88 @@
 .intl-tel-input{
     display: block !important;
 }
+
+contact-details-component{
+    .contact-details-left-pane{
+        .contact-profile-stats{
+            margin-left: -15px;
+            padding-left: 15px;
+            border-bottom: 1px solid #eee;
+        }
+        .contact-social-icons{
+            ul{
+                list-style: none;
+                padding: 0;
+                bottom: 0;
+                margin-bottom: 5px;
+                margin-top: 5px;
+
+                li{
+                    display: inline-block;
+                    span{
+                        width: 40px;
+                        height: 40px;
+                        border-radius: 30px;
+                        line-height: 35px;
+                        border: 2px solid #fff;
+                        margin-right: 5px;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+        .contact-stats{
+            border-bottom: 1px solid #eee;
+            span.description{
+                display: block;
+            }
+            span.value{
+                font-size: 24px;
+            }
+            .sessions{
+                width: 23%;
+                float: left;
+            }
+            .page-views{
+                width: 27%;
+                float: left;
+            }
+            .session-duration{
+                width: 30%;
+                float: left;
+            }
+            .clicks{
+                width: 20%;
+                float: left;
+            }
+        }
+        .contact-details-tab{
+            .tabbable{
+                background: transparent;                
+            }
+            .details{
+                margin-bottom: 5px;
+                ul.contact-tags{
+                    list-style: none;
+                    display: inline-block;
+                    padding-left: 10px;
+                    li{
+                        display: inline-block;
+                        margin-right: 5px;
+                        margin-bottom: 5px;
+                        .btn{
+                            padding: 3px 6px;
+                        }
+                    }
+                }
+                .full-name{
+                    font-size: 18px;
+                }
+                .value{
+                    margin-left: 5px;
+                }
+            }
+        }
+        
+    }
+}
