moving youtube library logic to manifest for #9801

--- a/templates/snippets/index_body_scripts.jade
+++ b/templates/snippets/index_body_scripts.jade
@@ -191,7 +191,7 @@ script(src="scripts/directives/indi-accordion.js")
 script(src="scripts/filters/offset.js")
 script(src="scripts/filters/reverse.js")
 script(src="scripts/services/ssbPageSectionService.js")
--if (isVideo)
+-if (loadYoutubeLib)
       script.
         var tag = document.createElement('script');
         tag.src = "https://www.youtube.com/iframe_api";
