--- a/templates/snippets/index_body_scripts_minimized.jade
+++ b/templates/snippets/index_body_scripts_minimized.jade
@@ -8,7 +8,7 @@ script(src="../js/indigenous.js")
 script(src="../js/ng-indigenous.js")
 
 
--if (isVideo)
+-if (loadYoutubeLib)
       script.
         var tag = document.createElement('script');
         tag.src = "https://www.youtube.com/iframe_api";
