#10543 Added address info

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -37,8 +37,9 @@
                             <span>Account</span>: Indigenous
                         </div>
                     </div>
+                    <div class="clearfix"></div>
                 </div>
-                <div class="clearfix"></div>
+                
                 <div class="contact-stats col-xs-12 margin-top-20 margin-bottom-20">
                     <div class="sessions">
                         <span class="description">
@@ -77,64 +78,76 @@
             <div class="contact-details-tab">
                 <tabset class="tabbable">
                     <tab heading="Contact Details">
-                        <div class="details">
-                            <span class="full-name">
-                                {{vm.state.fullName}}                                
-                            </span>
-                            <ul class="contact-tags" >
-                                <li ng-repeat="tag in vm.state.contact.tags track by $index">
-                                    <a class="btn btn btn-o btn-primary">{{tag.label}}</a>
-                                </li>
-                            </ul>
-                            <span>{{vm.state.contact.gender}}</span>
+                        <div class="col-xs-7">
+                            <div class="details">
+                                <span class="full-name">
+                                    {{vm.state.fullName}}                                
+                                </span>
+                                <ul class="contact-tags" >
+                                    <li ng-repeat="tag in vm.state.contact.tags track by $index">
+                                        <a class="btn btn btn-o btn-primary">{{tag.label}}</a>
+                                    </li>
+                                </ul>
+                                <span>{{vm.state.contact.gender}}</span>
+                            </div>
+                            <div class="details">
+                                <span class="description">
+                                    email:
+                                </span>
+                                <span class="value">
+                                    {{vm.state.contact.details[0].emails[0].email}}
+                                </span>
+                            </div>
+                            <div class="details">
+                                <span class="description">
+                                    Phone:
+                                </span>
+                                <span class="value">
+                                    {{vm.state.contact.details[0].phones[0].number}}
+                                </span>
+                            </div>
+                            <div class="details">
+                                <span class="description">
+                                    Website URL:
+                                </span>
+                                <span class="value">
+                                    {{vm.state.contact.websiteUrl}}
+                                </span>
+                            </div>
+                            <div class="details">
+                                <span class="description">
+                                    Facebook URL:
+                                </span>
+                                <span class="value">
+                                    {{vm.state.contact.facebookUrl}}
+                                </span>
+                            </div>
+                            <div class="details">
+                                <span class="description">
+                                    Linkedin URL:
+                                </span>
+                                <span class="value">
+                                    {{vm.state.contact.linkedInUrl}}
+                                </span>
+                            </div>
+                            <div class="details">
+                                <span class="description">
+                                    Company Name:
+                                </span>
+                                <span class="value">
+                                    {{vm.state.contact.companyName}}
+                                </span>
+                            </div>
                         </div>
-                        <div class="details">
-                            <span class="description">
-                                email:
-                            </span>
-                            <span class="value">
-                                {{vm.state.contact.details[0].emails[0].email}}
-                            </span>
-                        </div>
-                        <div class="details">
-                            <span class="description">
-                                Phone:
-                            </span>
-                            <span class="value">
-                                {{vm.state.contact.details[0].phones[0].number}}
-                            </span>
-                        </div>
-                        <div class="details">
-                            <span class="description">
-                                Website URL:
-                            </span>
-                            <span class="value">
-                                {{vm.state.contact.websiteUrl}}
-                            </span>
-                        </div>
-                        <div class="details">
-                            <span class="description">
-                                Facebook URL:
-                            </span>
-                            <span class="value">
-                                {{vm.state.contact.facebookUrl}}
-                            </span>
-                        </div>
-                        <div class="details">
-                            <span class="description">
-                                Linkedin URL:
-                            </span>
-                            <span class="value">
-                                {{vm.state.contact.linkedInUrl}}
-                            </span>
-                        </div>
-                        <div class="details">
-                            <span class="description">
-                                Company Name:
-                            </span>
-                            <span class="value">
-                                {{vm.state.contact.companyName}}
-                            </span>
+                        <div class="col-xs-5 address-pane">
+                            <div class="details">
+                                <span class="description address-desc">
+                                    Address:
+                                </span>
+                                <span class="value" ng-bind-html="vm.displayAddressFormat(vm.state.contact.details[0].addresses[0])">
+                                </span>
+                            </div>
+                            
                         </div>
                     </tab>
                     <tab heading="Devices/Browser">
