#10543 css issue in address info

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -144,7 +144,7 @@
                                 <span class="description address-desc">
                                     Address:
                                 </span>
-                                <span class="value" ng-bind-html="vm.displayAddressFormat(vm.state.contact.details[0].addresses[0])">
+                                <span class="value address-value" ng-bind-html="vm.displayAddressFormat(vm.state.contact.details[0].addresses[0])">
                                 </span>
                             </div>
                             
