--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -133,6 +133,9 @@ contact-details-component{
                 .address-desc{
                     display: block;
                 }
+                .address-value{
+                    margin-left: 0;
+                }
             }
         }
         
