Added add/edit mode #10543

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -107,7 +107,9 @@ contact-details-component{
                 }              
             }
             .address-pane{
-                top: 100px;
+                .details{
+                    margin-top: 80px;
+                }
             }
             .details{
                 margin-bottom: 5px;
