Add slide/map transition, timing

--- a/public/admin/assets/views/customer-analytics.html
+++ b/public/admin/assets/views/customer-analytics.html
@@ -39,7 +39,7 @@
                             <highchart config="livePlatformTrafficConfig" id="live-platform-traffic-chart"></highchart>
                         </div>
                         <div class="height-215 col-sm-4">
-                            <div ind-slider='{  slidesToShow:1, arrows:true, autoplay:false, touchMove:true, draggable:true }'>
+                            <div ind-slider='{  slidesToShow:1, arrows:false, autoplay:true, touchMove:true, speed:500, infinite:false, draggable:true }'>
                                 <div id="live-platform-visitor-locations-us"></div>
                                 <div id="live-platform-visitor-locations-world"></div>
                             </div>
