--- a/templates/snippets/index_body_scripts_minimized.jade
+++ b/templates/snippets/index_body_scripts_minimized.jade
@@ -8,11 +8,12 @@ script(src="../js/indigenous.js")
 script(src="../js/ng-indigenous.js")
 
 
-script.
-    var tag = document.createElement('script');
-    tag.src = "https://www.youtube.com/iframe_api";
-    var firstScriptTag = document.getElementsByTagName('script')[0];
-    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+-if (loadYoutubeLib)
+      script.
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
 | !{userScripts}
 | !{externalScripts}
