--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -99,6 +99,7 @@ contact-details-component{
             }
         }
         .contact-details-tab{
+            margin-left: -15px;
             .tabbable{
                 background: transparent;
                 .tab-content > .tab-pane{
@@ -137,6 +138,22 @@ contact-details-component{
                 }
                 .address-value{
                     margin-left: 0;
+                }
+            }
+
+            .edit-contact-info {
+                .form-group{
+                    padding-right: 0;
+                    .clip-radio{
+                        margin-top: 0;
+                        label{
+                            margin-right: 5px;
+                        }
+                    }
+                }
+                .address-fields{
+                    padding-right: 0;
+                    margin-bottom: 20px;
                 }
             }
         }
