--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -51,6 +51,18 @@ contact-details-component{
             margin-left: -15px;
             padding-left: 15px;
             border-bottom: 1px solid #eee;
+            .contact-image{
+                img{
+                    max-width:100%;
+                }
+                
+                span.fa{
+                    position: absolute;
+                    bottom: 10px;
+                    right: 20px;
+                    cursor: pointer;
+                }
+            }
         }
         .contact-social-icons{
             ul{
