Preview > Vertical navigation does not get applied on navigation component, if user view the same on preview page #10546

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -17,7 +17,7 @@
         ng-if="section.ssb===undefined"
         section="section"
         index="$index"
-        class="ssb-page-section-template">
+        class="ssb-page-section">
     </ssb-page-section-template>
 
 </div>
@@ -35,7 +35,7 @@
                     ng-repeat="sectionIndex in page.layoutModifiers['header']"
                     section="page.sections[sectionIndex]"
                     index="$index"
-                    class="ssb-page-section-template">
+                    class="ssb-page-section">
                 </ssb-page-section-template>
             </div>
         </div>
@@ -46,7 +46,7 @@
                     ng-repeat="sectionIndex in page.layoutModifiers['2-col-1']"
                     section="page.sections[sectionIndex]"
                     index="$index"
-                    class="ssb-page-section-template">
+                    class="ssb-page-section">
                 </ssb-page-section-template>
             </div>
 
@@ -55,7 +55,7 @@
                     ng-repeat="sectionIndex in page.layoutModifiers['2-col-2']"
                     section="page.sections[sectionIndex]"
                     index="$index"
-                    class="ssb-page-section-template">
+                    class="ssb-page-section">
                 </ssb-page-section-template>
             </div>
         </div>
@@ -66,7 +66,7 @@
                     ng-repeat="sectionIndex in page.layoutModifiers['footer']"
                     section="page.sections[sectionIndex]"
                     index="$index"
-                    class="ssb-page-section-template">
+                    class="ssb-page-section">
                 </ssb-page-section-template>
             </div>
         </div>
